apps/outline/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outline
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Outline"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "outline"
    gethomepage.dev/href: "https://outline.cyphers.app"
    gethomepage.dev/description: "Wiki & Docs"
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`outline.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: outline
          namespace: outline
          port: 80
  tls:
    secretName: production-cyphers-app-tls
